[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "plyght"
version = "0.1.0"
description = "ignore"
requires-python = ">=3.12,<4"
readme = "README.md"

authors = [
    { name = "Parker" }
]

maintainers = [
    { name=  "Parker" }
]

dependencies = [
    "opensearch-py>=2.8.0; extra == 'opensearch'",
    "neo4j>=5.28.1; extra == 'neo4j'",
    "kafka-python>=2.1.3; extra == 'kafka'",
    "boto3>=1.37.20; extra == 'boto'"
]

[project.optional-dependencies]
opensearch = ["opensearch-py>=2.8.0"]
neo4j      = ["neo4j>=5.28.1"]
kafka      = ["kafka-python>=2.1.3"]
boto       = ["boto3>=1.37.20"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
exclude = '''
/(
    mirror
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
skip = ["mirror"]